7.10.4
 - Logic for controlling non-blocking mode was inverted (non-Windows). (#1057)
 - Pass SQL error code when throwing `pqxx::insufficient_privilege`. (#1077)
7.10.3
 - Fix Microsoft Visual Studio C++17 build. (#1036, #1037)
 - Run Appveyor & CircleCI tests against multiple C++ versions at once.
7.10.2
 - CMake: Drop unneeded, broken `PostgreSQL_INCLUDE_DIRS` definition. (#981)
 - Handle spaces and single quotes in `connection::connection_string()` (#992)
 - _I said,_ can't pass parameters to streaming query.  Remove support. (#997)
 - Fix pkgconfig for static linkage; use config module `libpq`. (#999)
 - Made `row::as_tuple()` public. (#1003)
 - Avoid garbage at end of demangled names. (#1007)
 - Fix build when `std::free` is not `noexcept`, such as Mac. (#1010)
 - Document: generally `pqxx::type_name` should be a `std::string_view`. (#1009)
 - Fix float-to-text conversion workaround when `charconv` is missing.
 - Fix `result::affected_rows()` for empty results. (#1018)
 - Fix error message in `result::expect_columns()`. (#1020)
 - Fix for compilers that support concepts but not ranges. (#1017)
 - Avoid deprecation warning for `<ciso646>`. (#1023)
7.10.1
 - Fix string conversion buffer budget for arrays containing nulls. (#921)
 - Remove `-fanalyzer` option again; gcc is still broken.
 - Oops, no, minimum CMake version is not 3.28, but 3.12!
 - Fix warnings on compilers that accept `[[assume]]` with a warning. (#928)
 - Can't pass parameters to streaming query.
 - CMake build: take libpq path from build target, not absolute path. (#964)
 - Added explanation to `listen()` of when notifications come in. (#963)
7.10.0
 - Deprecate `errorhandler`; replace with lambda-friendly "notice handlers."
 - Deprecate `notification_receiver`; replace with "notification handlers"
 - Bump minimum CMake version to 3.12. (#851, #874)
 - Fixed error message on clashing transaction focuses. (#879)
 - Don't call`/bin/true`; macOS doesn't have it.  Just call `true`. (#885)