@@ -1,6 +1,7 @@
 7.10.4
  - Logic for controlling non-blocking mode was inverted (non-Windows). (#1057)
  - Pass SQL error code when throwing `pqxx::insufficient_privilege`. (#1077)
+ - Deprecated the unnamed prepared statement.
 7.10.3
  - Fix Microsoft Visual Studio C++17 build. (#1036, #1037)
  - Run Appveyor & CircleCI tests against multiple C++ versions at once.
